--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,11 @@
 
         @media (max-width: 600px) {
             body {
-                padding: 15px 10px;
+                padding: 15px 8px;
+            }
+
+            .chart-card {
+                padding: 16px 12px;
             }
 
             .bar-label {
@@ -251,14 +255,16 @@
 
             .table-header,
             .table-row {
-                grid-template-columns: 1.5fr 1fr 40px;
-                gap: 8px;
-                padding: 12px 8px;
+                grid-template-columns: 1fr auto 32px;
+                gap: 10px;
+                padding: 12px 4px;
             }
 
             .table-header span:nth-child(2),
             .table-row .duration {
                 text-align: right;
+                white-space: nowrap;
+                font-size: 0.85rem;
             }
 
             .table-header span:nth-child(3),
