--- a/public/index.html
+++ b/public/index.html
@@ -255,8 +255,8 @@
 
             .table-header,
             .table-row {
-                grid-template-columns: 1fr auto 32px;
-                gap: 10px;
+                grid-template-columns: 1fr auto 55px 32px;
+                gap: 8px;
                 padding: 12px 4px;
             }
 
@@ -264,12 +264,22 @@
             .table-row .duration {
                 text-align: right;
                 white-space: nowrap;
-                font-size: 0.85rem;
+                font-size: 0.82rem;
             }
 
             .table-header span:nth-child(3),
             .table-row .percentage {
+                display: block;
+                text-align: right;
+                font-size: 0.75rem;
+            }
+
+            .table-row .percentage .percentage-bar {
                 display: none;
+            }
+
+            .table-row .app-name {
+                min-width: 0;
             }
         }
 
