--- a/public/index.html
+++ b/public/index.html
@@ -237,11 +237,11 @@
 
         @media (max-width: 600px) {
             body {
-                padding: 15px 8px;
+                padding: 15px 5px;
             }
 
             .chart-card {
-                padding: 16px 12px;
+                padding: 16px 4px;
             }
 
             .bar-label {
@@ -255,23 +255,33 @@
 
             .table-header,
             .table-row {
-                grid-template-columns: 1fr auto 55px 32px;
-                gap: 8px;
-                padding: 12px 4px;
+                grid-template-columns: 1fr auto auto 30px;
+                gap: 4px;
+                padding: 12px 0;
             }
 
-            .table-header span:nth-child(2),
-            .table-row .duration {
+            .table-header span:nth-child(n+2),
+            .table-row .duration,
+            .table-row .percentage,
+            .table-row>div:last-child {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
                 text-align: right;
+            }
+
+            .table-row .duration {
                 white-space: nowrap;
                 font-size: 0.82rem;
+                color: var(--accent-blue);
+                padding-right: 2px;
             }
 
             .table-header span:nth-child(3),
             .table-row .percentage {
                 display: block;
-                text-align: right;
                 font-size: 0.75rem;
+                min-width: 42px;
             }
 
             .table-row .percentage .percentage-bar {
@@ -280,6 +290,10 @@
 
             .table-row .app-name {
                 min-width: 0;
+            }
+
+            .rank {
+                margin: 0;
             }
         }
 
